Json File made correct

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2396,20 +2396,108 @@
  =========================================================================================================================
 */
 
-@media (max-width: 1200px) {
-  #download-book-form article.download-section table {
-    width: 80%;
+@media (max-width: 1400px) {
+  #download-book-form article.download-section .box {
+    width: 180px;
+    height: 270px;
+  }
+
+  #download-book-form article.download-section .box > p:first-child {
+    font-size: 1.2rem;
+    padding-top: 0.5rem;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(2) {
+    font-size: 1.3rem;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(4) {
+    margin-bottom: 12px;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(5) {
+    padding-top: 0;
   }
 }
 
 @media (max-width: 992px) {
   #download-book-form article.download-section {
-    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+
+  #download-book-form article.download-section .box {
+    width: 160px;
+    height: 240px;
+    padding: 0.5rem;
+  }
+
+  #download-book-form article.download-section .box > p:first-child {
+    font-size: 1rem;
+    padding-top: 0.5rem;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(2) {
+    font-size: 1.2rem;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(4) {
+    margin-bottom: 12px;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(4) span {
+    font-size: 0.7rem;
+  }
+
+  #download-book-form article.download-section .box a {
+    bottom: 1rem;
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 444px) {
   #download-book-form article.download-section {
-    grid-template-columns: repeat(1, 1fr);
+    gap: 12px;
+  }
+
+  #download-book-form article.download-section .box {
+    width: 120px;
+    height: 180px;
+    padding: 0.4rem;
+  }
+
+  #download-book-form article.download-section .box > p:first-child {
+    font-size: 0.8rem;
+    padding-top: 0;
+    margin-bottom: 5px;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(2) {
+    font-size: 1rem;
+    padding-top: 0;
+    margin-bottom: 5px;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(3) {
+    font-size: 0.7rem;
+    letter-spacing: 1.5px;
+    padding-top: 0;
+    margin-bottom: 5px;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(4) {
+    margin-bottom: 5px;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(4) span {
+    font-size: 0.7rem;
+  }
+
+  #download-book-form article.download-section .box > p:nth-child(5) {
+    font-size: 0.7rem;
+    margin-bottom: 5px;
+  }
+
+  #download-book-form article.download-section .box a {
+    font-size: 0.7rem;
+    bottom: 1rem;
   }
 }
